--- a/King_Colin/MainWindow.xaml
+++ b/King_Colin/MainWindow.xaml
@@ -6,45 +6,52 @@
     xmlns:local="clr-namespace:King_Colin"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="King Colin"
-    Width="1920"
-    Height="1080"
-    AllowsTransparency="True"
+    Width="1434"
+    Height="818"
     FocusManager.FocusedElement="{Binding ElementName=cv_Jeux}"
     Loaded="MainWindow_Loaded"
     WindowStartupLocation="CenterScreen"
-    WindowState="Maximized"
-    WindowStyle="None"
     mc:Ignorable="d">
     <Window.Background>
         <SolidColorBrush Opacity="0" />
     </Window.Background>
     <Grid>
-        <Canvas x:Name="cv_Global">
+        <Canvas x:Name="cv_Global" Margin="-1,0,1,0">
             <Canvas
                 x:Name="cv_Secrete"
-                Canvas.Left="160"
-                Canvas.Top="456"
-                Width="400"
-                Height="400"
+                Canvas.Left="197"
+                Canvas.Top="314"
+                Width="200"
+                Height="200"
                 HorizontalAlignment="Center"
                 VerticalAlignment="Top"
-                Visibility="Hidden">
+                Visibility="Visible">
                 <Rectangle
                     x:Name="rect_Salle_Secrete"
-                    Width="400"
-                    Height="400"
+                    Width="200"
+                    Height="200"
                     HorizontalAlignment="Left"
                     VerticalAlignment="Top" />
-                <Image Height="400" Source="/Img/Element/salleSecrette.jpg" Stretch="Fill" Width="400"/>
-                <Rectangle Height="8" Width="400" HorizontalAlignment="Center" Canvas.Top="392" VerticalAlignment="Top"/>
+                <Image
+                    Width="200"
+                    Height="200"
+                    Source="/Img/Element/salleSecrette.jpg"
+                    Stretch="Fill" />
+                <Rectangle
+                    Canvas.Top="196"
+                    Width="200"
+                    Height="4"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Top" />
                 <Rectangle
                     x:Name="rect_Portail"
-                    Canvas.Top="266"
-                    Width="125"
-                    Height="125"
+                    Canvas.Left="8"
+                    Canvas.Top="145"
+                    Width="50"
+                    Height="50"
                     HorizontalAlignment="Center"
                     VerticalAlignment="Top"
-                    RenderTransformOrigin="0.5,0.5" Canvas.Left="17">
+                    RenderTransformOrigin="0.5,0.5">
                     <Rectangle.RenderTransform>
                         <TransformGroup>
                             <ScaleTransform />
@@ -57,253 +64,256 @@
             </Canvas>
             <Canvas
                 Name="cv_Jeux"
-                Canvas.Left="560"
-                Width="800"
-                Height="1080"
-                HorizontalAlignment="Left"
-                VerticalAlignment="Center"
+                Canvas.Left="397"
+                Width="640"
+                Height="800"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Top"
                 Focusable="True"
                 KeyDown="cv_Jeux_KeyDown"
-                KeyUp="cv_Jeux_KeyUp">
+                KeyUp="cv_Jeux_KeyUp"
+                Visibility="Visible">
                 <Rectangle
                     Name="rect_FondEcran"
-                    Width="800"
-                    Height="1080"
+                    Width="640"
+                    Height="800"
                     HorizontalAlignment="Center"
                     VerticalAlignment="Top" />
                 <Rectangle
                     x:Name="rect_Marteau"
-                    Canvas.Left="442"
-                    Canvas.Top="551"
-                    Width="60"
-                    Height="52"
-                    HorizontalAlignment="Center"
+                    Canvas.Left="323"
+                    Canvas.Top="322"
+                    Width="30"
+                    Height="26"
+                    HorizontalAlignment="Left"
                     VerticalAlignment="Top" />
                 <Rectangle
                     Name="rect_plateforme1"
-                    Canvas.Top="847"
-                    Width="800"
-                    Height="25"
-                    HorizontalAlignment="Left"
-                    VerticalAlignment="Center"
+                    Canvas.Top="510"
+                    Width="640"
+                    Height="12"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Top"
                     Fill="Purple" />
                 <Rectangle
                     Name="rect_plateforme2"
-                    Canvas.Top="687"
-                    Width="800"
-                    Height="25"
+                    Canvas.Top="410"
+                    Width="640"
+                    Height="12"
                     HorizontalAlignment="Center"
                     VerticalAlignment="Top"
                     Fill="Purple" />
                 <Rectangle
                     Name="rect_plateforme3"
-                    Canvas.Top="527"
-                    Width="800"
-                    Height="24"
+                    Canvas.Top="310"
+                    Width="640"
+                    Height="12"
                     HorizontalAlignment="Center"
                     VerticalAlignment="Top"
                     Fill="Purple" />
                 <Rectangle
                     Name="rect_plateforme4"
-                    Canvas.Top="367"
-                    Width="800"
-                    Height="24"
+                    Canvas.Top="210"
+                    Width="640"
+                    Height="12"
                     HorizontalAlignment="Center"
                     VerticalAlignment="Top"
                     Fill="Purple" />
                 <Rectangle
                     Name="rect_plateforme5"
-                    Canvas.Left="348"
-                    Canvas.Top="207"
-                    Width="350"
-                    Height="24"
+                    Canvas.Left="335"
+                    Canvas.Top="110"
+                    Width="250"
+                    Height="12"
                     HorizontalAlignment="Left"
-                    VerticalAlignment="Center"
+                    VerticalAlignment="Top"
                     Fill="Purple" />
                 <Rectangle
                     x:Name="rect_echelle05"
                     Canvas.Left="323"
-                    Canvas.Top="147"
-                    Width="25"
-                    Height="220             "
+                    Canvas.Top="80"
+                    Width="12"
+                    Height="130             "
                     HorizontalAlignment="Center"
                     VerticalAlignment="Top"
                     Fill="blue" />
                 <Rectangle
                     x:Name="rect_echelle01"
-                    Canvas.Left="589"
-                    Canvas.Top="687"
-                    Width="26"
-                    Height="160"
-                    HorizontalAlignment="Center"
+                    Canvas.Left="573"
+                    Canvas.Top="410"
+                    Width="12"
+                    Height="100"
+                    HorizontalAlignment="Left"
                     VerticalAlignment="Top"
                     Fill="blue" />
                 <Rectangle
                     x:Name="rect_echelle02"
-                    Canvas.Left="196"
-                    Canvas.Top="527"
-                    Width="26"
-                    Height="160"
-                    HorizontalAlignment="Center"
+                    Canvas.Left="148"
+                    Canvas.Top="310"
+                    Width="12"
+                    Height="100"
+                    HorizontalAlignment="Left"
                     VerticalAlignment="Top"
                     Fill="blue" />
                 <Rectangle
                     x:Name="rect_echelle03"
-                    Canvas.Left="711"
-                    Canvas.Top="367"
-                    Width="25"
-                    Height="160"
+                    Canvas.Left="608"
+                    Canvas.Top="210"
+                    Width="12"
+                    Height="100"
                     HorizontalAlignment="Left"
                     VerticalAlignment="Top"
                     Fill="blue" />
                 <Rectangle
                     x:Name="rect_echelle04"
-                    Canvas.Left="629"
-                    Canvas.Top="207"
-                    Width="25"
-                    Height="160"
+                    Canvas.Left="520"
+                    Canvas.Top="110"
+                    Width="12"
+                    Height="100"
                     HorizontalAlignment="Left"
-                    VerticalAlignment="Top"
+                    VerticalAlignment="Center"
                     Fill="blue" />
                 <Rectangle
                     x:Name="rect_echelle06"
-                    Canvas.Left="277"
-                    Canvas.Top="147"
-                    Width="25"
-                    Height="220"
+                    Canvas.Left="289"
+                    Canvas.Top="80"
+                    Width="12"
+                    Height="130"
                     HorizontalAlignment="Left"
-                    VerticalAlignment="Top"
+                    VerticalAlignment="Center"
                     Fill="blue" />
                 <Rectangle
                     x:Name="rect_echelle07"
-                    Canvas.Left="366"
-                    Canvas.Top="687"
-                    Width="26"
-                    Height="60"
-                    HorizontalAlignment="Center"
+                    Canvas.Left="359"
+                    Canvas.Top="410"
+                    Width="12"
+                    Height="30"
+                    HorizontalAlignment="Left"
                     VerticalAlignment="Top"
                     Fill="blue" />
                 <Rectangle
                     x:Name="rect_echelle08"
-                    Canvas.Left="366"
-                    Canvas.Top="797"
-                    Width="26"
-                    Height="50"
+                    Canvas.Left="359"
+                    Canvas.Top="486"
+                    Width="12"
+                    Height="24"
                     HorizontalAlignment="Center"
                     VerticalAlignment="Top"
                     Fill="blue" />
                 <Rectangle
                     x:Name="rect_echelle09"
-                    Canvas.Left="277"
-                    Canvas.Top="-73"
-                    Width="25"
-                    Height="220"
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Top"
+                    Canvas.Left="289"
+                    Canvas.Top="-50"
+                    Width="12"
+                    Height="130"
+                    HorizontalAlignment="Left"
+                    VerticalAlignment="Center"
                     Fill="blue" />
                 <Rectangle
                     x:Name="rect_echelle10"
                     Canvas.Left="323"
-                    Canvas.Top="-73"
-                    Width="25"
-                    Height="220             "
+                    Canvas.Top="-50"
+                    Width="12"
+                    Height="130             "
                     HorizontalAlignment="Center"
                     VerticalAlignment="Top"
                     Fill="blue" />
                 <Rectangle
                     x:Name="rect_ennemi1"
-                    Canvas.Left="534"
-                    Canvas.Top="797"
-                    Width="50"
-                    Height="50"
+                    Canvas.Left="491"
+                    Canvas.Top="478"
+                    Width="35"
+                    Height="32"
                     HorizontalAlignment="Left"
                     VerticalAlignment="Top"
                     Fill="Orange" />
                 <Rectangle
                     x:Name="rect_ennemi2"
-                    Canvas.Left="238"
-                    Canvas.Top="637"
-                    Width="50"
-                    Height="50"
-                    HorizontalAlignment="Center"
+                    Canvas.Left="18"
+                    Canvas.Top="378"
+                    Width="35"
+                    Height="32"
+                    HorizontalAlignment="Left"
                     VerticalAlignment="Top"
                     Fill="Orange" />
                 <Rectangle
                     x:Name="rect_ennemi3"
-                    Canvas.Left="455"
-                    Canvas.Top="477"
-                    Width="50"
-                    Height="50"
-                    HorizontalAlignment="Center"
+                    Canvas.Left="348"
+                    Canvas.Top="278"
+                    Width="34"
+                    Height="32"
+                    HorizontalAlignment="Left"
                     VerticalAlignment="Top"
                     Fill="Orange" />
                 <Rectangle
                     x:Name="rect_baril3"
-                    Canvas.Left="10"
-                    Canvas.Top="301"
-                    Width="51"
-                    Height="66"
+                    Canvas.Left="41"
+                    Canvas.Top="172"
+                    Width="29"
+                    Height="38"
+                    HorizontalAlignment="Left"
+                    VerticalAlignment="Center"
                     Fill="White" />
                 <Rectangle
                     x:Name="rect_baril1"
-                    Canvas.Left="10"
-                    Canvas.Top="235"
-                    Width="51"
-                    Height="66"
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Top"
+                    Canvas.Left="41"
+                    Canvas.Top="134"
+                    Width="29"
+                    Height="38"
+                    HorizontalAlignment="Left"
+                    VerticalAlignment="Center"
                     Fill="White" />
                 <Rectangle
                     x:Name="rect_baril4"
-                    Canvas.Left="61"
-                    Canvas.Top="301"
-                    Width="51"
-                    Height="66"
+                    Canvas.Left="70"
+                    Canvas.Top="172"
+                    Width="29"
+                    Height="38"
                     HorizontalAlignment="Left"
-                    VerticalAlignment="Top"
+                    VerticalAlignment="Center"
                     Fill="White" />
                 <Rectangle
                     x:Name="rect_baril2"
-                    Canvas.Left="61"
-                    Canvas.Top="235"
-                    Width="51"
-                    Height="66"
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Top"
+                    Canvas.Left="70"
+                    Canvas.Top="134"
+                    Width="29"
+                    Height="38"
+                    HorizontalAlignment="Left"
+                    VerticalAlignment="Center"
                     Fill="White" />
                 <Rectangle
                     x:Name="rect_passage"
-                    Canvas.Top="717"
-                    Width="10"
-                    Height="130"
                     Canvas.Left="0"
-                    HorizontalAlignment="Left"
+                    Canvas.Top="445"
+                    Width="10"
+                    Height="65"
+                    HorizontalAlignment="Center"
                     VerticalAlignment="Center"
                     Fill="Black" />
                 <Rectangle
                     x:Name="rect_joueur1"
-                    Canvas.Left="51"
-                    Canvas.Top="775"
-                    Width="45"
-                    Height="72"
+                    Canvas.Left="30"
+                    Canvas.Top="471"
+                    Width="31"
+                    Height="39"
                     HorizontalAlignment="Left"
                     VerticalAlignment="Top"
                     Fill="Red" />
                 <Rectangle
                     x:Name="rect_princesse"
-                    Canvas.Left="400"
-                    Canvas.Top="141"
-                    Width="54"
-                    Height="66"
-                    HorizontalAlignment="Center"
+                    Canvas.Left="354"
+                    Canvas.Top="65"
+                    Width="35"
+                    Height="45"
+                    HorizontalAlignment="Left"
                     VerticalAlignment="Top"
                     Fill="Pink" />
                 <Rectangle
                     x:Name="rect_donkeykong"
-                    Canvas.Left="136"
-                    Canvas.Top="239"
-                    Width="108"
-                    Height="128"
+                    Canvas.Left="142"
+                    Canvas.Top="141"
+                    Width="58"
+                    Height="69"
                     Fill="Green" />
             </Canvas>
         </Canvas>
@@ -311,8 +321,8 @@
         <Canvas x:Name="cv_Combat" Visibility="Hidden">
             <Rectangle
                 x:Name="rect_FondEcran2"
-                Width="1920"
-                Height="1080" />
+                Width="1434"
+                Height="806" />
             <Rectangle
                 x:Name="rect_plat_combat"
                 Canvas.Left="208"
